--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/moefox"]
 	path = themes/moefox
-	url = git@github.com:nidhoggfgg/hugo-moefox.git
+	url = https://github.com/nidhoggfgg/hugo-moefox.git
