--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "nothing"
 theme = "moefox"
 Paginate = 5
 defaultContentLanguage = "zh-cn"
+enableGitInfo = true
 
 [permalinks]
     posts = "/post/:slug"
@@ -37,4 +38,4 @@ defaultContentLanguage = "zh-cn"
     ordered = true
 
 [frontmatter]
-    lastmod = ['lastmod', ':git', ':fileModTime', ':default']
+    lastmod = [':git', 'lastmod', ':fileModTime', ':default']
